# asteroid-scanner

./: .gitignore  MANIFEST.md  README.md  docker-compose.yml  sightings.csv
dynameat-api/: Dockerfile  docker-entrypoint.sh  pyproject.toml  requirements.txt
dynameat-api/.data/: sightings.csv  sightings.tsv
dynameat-api/src/api/: models.py  serializers.py  services.py  urls.py  views.py
dynameat-api/src/api/migrations/: 0001_initial.py
dynameat-api/src/core/: settings.py  urls.py
dynameat-spa/: Dockerfile  index.html  package-lock.json  package.json
dynameat-spa/src/: App.vue  main.ts
dynameat-spa/src/api/: index.ts
dynameat-spa/src/components/: Card.vue  Notification.vue  Spinner.vue
dynameat-spa/src/components/icons/: HomeIcon.vue  MeteoriteIcon.vue  SearchIcon.vue  UploadIcon.vue
dynameat-spa/src/router/: index.ts
dynameat-spa/src/stores/: notifications.ts
dynameat-spa/src/views/: AsteroidDetailView.vue  AsteroidListView.vue  AsteroidSearchView.vue  FileUploadView.vue  HomeView.vue
